renamed:    README.md -> New folder/README.md 	renamed:    directory.html -> New folder/directory.html 	renamed:    discover.html -> New folder/discover.html 	renamed:    images/business1-placeholder.png -> New folder/images/business1-placeholder.png 	renamed:    images/business2-placeholder.png -> New folder/images/business2-placeholder.png 	renamed:    images/business3-placeholder.png -> New folder/images/business3-placeholder.png 	renamed:    images/chamber-logo.png -> New folder/images/chamber-logo.png 	renamed:    images/hero-image.webp -> New folder/images/hero-image.webp 	new file:   New folder/images/linkedin.svg 	new file:   New folder/images/twitter.svg 	renamed:    images/weather-placeholder.svg -> New folder/images/weather-placeholder.svg 	new file:   New folder/images/youtube.svg 	new file:   New folder/index.html 	renamed:    join.html -> New folder/join.html 	renamed:    scripts/main.js -> New folder/scripts/main.js 	renamed:    styles/main.css -> New folder/styles/main.css 	new file:   images/facebook.svg 	new file:   images/github.png 	new file:   images/github.zip 	new file:   images/mylogo.svg 	modified:   index.html 	new file:   scripts/course.js 	new file:   scripts/date.js 	new file:   scripts/navigation.js 	new file:   styles/larger.css 	new file:   styles/small.css

--- a/index.html
+++ b/index.html
@@ -1,140 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timbuktu Chamber of Commerce - Home</title>
-    <meta name="description" content="Official website for the Timbuktu Chamber of Commerce, promoting local businesses and community growth.">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" href="images/favicon.ico">
+    <title>Nirintsoa Liva Jhonson Rabariharinjaka - WDD231 Course Home Page</title>
+    <meta name="description" content="Your personal home page for the WDD231 course, showcasing web development skills and projects.">
+    <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/larger.css">
+
+    <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/date.js" defer></script>
+    <script src="scripts/course.js" defer></script>
 </head>
 <body>
-    <header class="site-header">
+    <header>
         <div class="header-content">
-            <div class="logo-container">
-                <img src="images/chamber-logo.png" alt="Timbuktu Chamber of Commerce Logo" class="chamber-logo">
-                <h1 class="site-title">Timbuktu <br><span>Chamber of Commerce</span></h1>
-            </div>
-            <nav class="main-nav">
-                <div class="theme-toggle">
-                    <button class="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
-                </div>
-                <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
-                <ul class="nav-links">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="discover.html">Discover</a></li>
-                    <li><a href="directory.html">Directory</a></li>
-                    <li><a href="join.html">Join</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="podcast.html">Podcast</a></li>
-                    <li><a href="events.html">Events</a></li>
-                </ul>
-            </nav>
-        </div>
+            <img src="images/mylogo.svg" alt="Site Logo" class="logo">
+            <span>Nirintsoa Liva Jhonson Rabariharinjaka</span>
+            <button id="menu-button" class="menu-button">&#9776;</button> </div>
+        <nav id="main-nav">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li> <li><a href="chamber/index.html">Chamber</a></li>
+                <li><a href="final/index.html">Final</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main class="homepage-main">
-        <section class="hero-section">
-            <img src="images/hero-image.webp" alt="Scenic view of Timbuktu" class="hero-image">
-            <div class="hero-overlay">
-                <h2>Welcome to the Timbuktu Chamber of Commerce!</h2>
-                <a href="#" class="btn-primary">Keynote Tickets</a>
-            </div>
+    <main>
+        <h1>Home</h1>
+
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p>Welcome to my WDD231 course home page! My name is Nirintsoa Liva Jhonson Rabariharinjaka, and I am a student passionate about web development. I am currently learning HTML, CSS, and JavaScript to build engaging and responsive web experiences.</p>
+            <h3>Skills & Interests:</h3>
+            <ul>
+                <li>HTML5 & Semantic Structure</li>
+                <li>CSS3 & Responsive Design</li>
+                <li>JavaScript Fundamentals</li>
+                <li>Problem Solving</li>
+            </ul>
         </section>
 
-        <section class="home-grid">
-            <div class="grid-item events-section">
-                <h2>Events</h2>
-                <p>Check out our upcoming events and workshops!</p>
-                <ul>
-                    <li>Networking Mixer - July 15th</li>
-                    <li>Small Business Workshop - July 20th</li>
-                    <li>Community Fair - August 5th</li>
+        <section id="assignments">
+            <h2>Assignments & Projects</h2>
+            <p>Here you'll find links to the assignments and projects I'll be working on throughout this course.</p>
+            <ul>
+                <li><a href="placeholder-week-1-assignment.html">Week 1 Assignment: Placeholder</a></li>
+                <li><a href="placeholder-week-2-assignment.html">Week 2 Assignment: Placeholder</a></li>
+                <li><a href="chamber/index.html">Chamber of Commerce Site (Week X)</a></li>
+                <li><a href="final/index.html">Final Project Site (Week Y)</a></li>
                 </ul>
-                <a href="events.html" class="btn-secondary">View All Events</a>
-            </div>
-
-            <div class="grid-item weather-section">
-                <h2>Current Weather</h2>
-                <div class="current-weather-display">
-                    <img id="weather-icon" src="images/weather-placeholder.svg" alt="Weather Icon">
-                    <p><span id="current-temp">75°F</span></p>
-                    <p id="weather-condition">Party Cloudy</p>
-                    <p>High: <span id="high-temp">85°</span> Low: <span id="low-temp">52°</span></p>
-                    <p>Humidity: <span id="humidity">34%</span></p>
-                    <p>Sunrise: <span id="sunrise">7:30am</span> Sunset: <span id="sunset">9:59pm</span></p>
-                </div>
-            </div>
-
-            <div class="grid-item forecast-section">
-                <h2>Weather Forecast</h2>
-                <div class="forecast-day">
-                    <p>Today: <span id="forecast-today">90°F</span></p>
-                </div>
-                <div class="forecast-day">
-                    <p>Wednesday: <span id="forecast-wed">89°F</span></p>
-                </div>
-                <div class="forecast-day">
-                    <p>Thursday: <span id="forecast-thu">68°F</span></p>
-                </div>
-            </div>
         </section>
 
-        <section class="business-spotlights">
-            <h2>Business Spotlights</h2>
-            <div class="spotlight-grid">
-                <div class="business-card">
-                    <img src="images/business1-placeholder.png" alt="Business 1 Logo">
-                    <h3>Business Name 1</h3>
-                    <p class="tagline">Business Tag Line</p>
-                    <p>EMAIL: info@gmail.com</p>
-                    <p>PHONE: 800-555-1234</p>
-                    <p>URL: <a href="http://mybusiness.com">mybusiness.com</a></p>
-                </div>
-                <div class="business-card">
-                    <img src="images/business2-placeholder.png" alt="Business 2 Logo">
-                    <h3>Business Name 2</h3>
-                    <p class="tagline">Business Tag Line</p>
-                    <p>EMAIL: info@gmail.com</p>
-                    <p>PHONE: 800-555-1234</p>
-                    <p>URL: <a href="http://mybusiness.com">mybusiness.com</a></p>
-                </div>
-                <div class="business-card">
-                    <img src="images/business3-placeholder.png" alt="Business 3 Logo">
-                    <h3>Business Name 3</h3>
-                    <p class="tagline">Business Tag Line</p>
-                    <p>EMAIL: info@gmail.com</p>
-                    <p>PHONE: 800-555-1234</p>
-                    <p>URL: <a href="http://mybusiness.com">mybusiness.com</a></p>
-                </div>
+        <section id="course-certificate">
+            <h2>Web and Computer Programming Certificate</h2>
+            <div class="course-filters">
+                <button id="filter-all" class="filter-button active-filter">All Courses</button>
+                <button id="filter-wdd" class="filter-button">WDD Courses</button>
+                <button id="filter-cse" class="filter-button">CSE Courses</button>
             </div>
+            <div id="courses-container" class="courses-grid">
+                </div>
+            <p class="credits-summary">Total Credits Displayed: <span id="total-credits">0</span></p>
         </section>
+
     </main>
 
-    <footer class="site-footer">
-        <div class="footer-content">
-            <div class="chamber-contact-info">
-                <h3>Timbuktu Chamber of Commerce</h3>
-                <p>10 Rue De La Paix</p>
-                <p>Timbuktu, Mali 999</p>
-                <p>Email: <a href="mailto:info@timbuktuchamber.org">info@timbuktuchamber.org</a></p>
-                <p>Phone: (223) 555-2300</p>
-            </div>
-            <div class="social-media">
-                <a href="#" aria-label="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
-                <a href="#" aria-label="Twitter"><img src="images/twitter.svg" alt="Twitter"></a>
-                <a href="#" aria-label="LinkedIn"><img src="images/linkedin.svg" alt="LinkedIn"></a>
-            </div>
-            <div class="project-info">
-                <p>WDD231 Class Project</p>
-                <p>Marie Martinez</p>
-                <p>&copy; <span id="currentyear"></span> Timbuktu Chamber of Commerce</p>
-                <p>Last Modification: <span id="lastmodified"></span></p>
-            </div>
+    <footer>
+        <div class="social-media">
+            <a href="https://github.com/yourgithubusername" target="_blank"><img src="images/github.png" alt="GitHub"></a>
+            <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+            <a href="https://twitter.com/yourtwitter" target="_blank"><img src="images/twitter.svg" alt="X (formerly Twitter)"></a>
+            <a href="https://facebook.com/yourfacebook" target="_blank"><img src="images/facebook.svg" alt="Facebook"></a>
         </div>
+        <p>&copy; <span id="currentyear"></span> Nirintsoa Liva Jhonson Rabariharinjaka &#9702; Toamasina/Madagascar</p>
+        <p id="lastModified"></p>
     </footer>
 
-    <script src="scripts/main.js"></script>
 </body>
 </html>
