--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 
     <footer>
         <div class="social-media">
-            <a href="https://github.com/yourgithubusername" target="_blank"><img src="images/github.png" alt="GitHub"></a>
-            <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
-            <a href="https://twitter.com/yourtwitter" target="_blank"><img src="images/twitter.svg" alt="X (formerly Twitter)"></a>
-            <a href="https://facebook.com/yourfacebook" target="_blank"><img src="images/facebook.svg" alt="Facebook"></a>
+            <a href="https://livajhonson.github.io/wdd231/" target="_blank"><img src="images/github.png" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/liva-jhonson-140088338/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+            <a href="https://twitter.com/twitter" target="_blank"><img src="images/twitter.svg" alt="X (formerly Twitter)"></a>
+            <a href="https://facebook.com/facebook" target="_blank"><img src="images/facebook.svg" alt="Facebook"></a>
         </div>
         <p>&copy; <span id="currentyear"></span> Nirintsoa Liva Jhonson Rabariharinjaka &#9702; Toamasina/Madagascar</p>
         <p id="lastModified"></p>
