modified:   index.html 	modified:   scripts/course.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nirintsoa Liva Jhonson Rabariharinjaka - WDD231 Course Home Page</title>
-    <meta name="description" content="Your personal home page for the WDD231 course, showcasing web development skills and projects.">
+    <meta name="description" content="My personal home page for the WDD231 course, showcasing web development skills and projects.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
