--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="My personal home page for the WDD231 course, showcasing web development skills and projects.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/small.css">
@@ -21,10 +24,12 @@
         <div class="header-content">
             <img src="images/mylogo.svg" alt="Site Logo" class="logo">
             <span>Nirintsoa Liva Jhonson Rabariharinjaka</span>
-            <button id="menu-button" class="menu-button">&#9776;</button> </div>
+            <button id="menu-button" class="menu-button">&#9776;</button>
+        </div>
         <nav id="main-nav">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li> <li><a href="chamber/index.html">Chamber</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="chamber/index.html">Chamber</a></li>
                 <li><a href="final/index.html">Final</a></li>
             </ul>
         </nav>
@@ -49,11 +54,11 @@
             <h2>Assignments & Projects</h2>
             <p>Here you'll find links to the assignments and projects I'll be working on throughout this course.</p>
             <ul>
-                <li><a href="placeholder-week-1-assignment.html">Week 1 Assignment: Placeholder</a></li>
-                <li><a href="placeholder-week-2-assignment.html">Week 2 Assignment: Placeholder</a></li>
+                <li><a href="w01-assign.html">Week 1 Assignment: Placeholder</a></li>
+                <li><a href="w02-assign.html">Week 2 Assignment: Placeholder</a></li>
                 <li><a href="chamber/index.html">Chamber of Commerce Site (Week X)</a></li>
                 <li><a href="final/index.html">Final Project Site (Week Y)</a></li>
-                </ul>
+            </ul>
         </section>
 
         <section id="course-certificate">
@@ -64,7 +69,7 @@
                 <button id="filter-cse" class="filter-button">CSE Courses</button>
             </div>
             <div id="courses-container" class="courses-grid">
-                </div>
+            </div>
             <p class="credits-summary">Total Credits Displayed: <span id="total-credits">0</span></p>
         </section>
 
@@ -72,10 +77,10 @@
 
     <footer>
         <div class="social-media">
-            <a href="https://github.com/LivaJhonson/wdd231" target="_blank"><img src="images/github.png" alt="GitHub"></a>
-            <a href="https://www.linkedin.com/in/liva-jhonson-140088338/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
-            <a href="https://twitter.com/twitter" target="_blank"><img src="images/twitter.svg" alt="X (formerly Twitter)"></a>
-            <a href="https://facebook.com/facebook" target="_blank"><img src="images/facebook.svg" alt="Facebook"></a>
+            <a href="https://github.com/LivaJhonson/wdd231" target="_blank"><img src="images/github.png" alt="Link to my GitHub Profile"></a>
+            <a href="https://www.linkedin.com/in/liva-jhonson-140088338/" target="_blank"><img src="images/linkedin.svg" alt="Link to my LinkedIn Profile"></a>
+            <a href="https://twitter.com/twitter" target="_blank"><img src="images/twitter.svg" alt="Link to X (formerly Twitter) Profile"></a>
+            <a href="https://facebook.com/facebook" target="_blank"><img src="images/facebook.svg" alt="Link to my Facebook Profile"></a>
         </div>
         <p>&copy; <span id="currentyear"></span> Nirintsoa Liva Jhonson Rabariharinjaka &#9702; Toamasina/Madagascar</p>
         <p id="lastModified"></p>
