modified:   index.html 	modified:   styles/small.css

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <footer>
         <div class="social-media">
-            <a href="https://github.com/LivaJhonson/wdd231" target="_blank"><img src="images/github.png" alt="Link to my GitHub Profile"></a>
+            <a href="https://github.com/LivaJhonson/wdd231" target="_blank"><img src="images/github.png" alt="Link that goes to my GitHub Profile"></a>
             <a href="https://www.linkedin.com/in/liva-jhonson-140088338/" target="_blank"><img src="images/linkedin.svg" alt="Link to my LinkedIn Profile"></a>
             <a href="https://twitter.com/twitter" target="_blank"><img src="images/twitter.svg" alt="Link to X (formerly Twitter) Profile"></a>
             <a href="https://facebook.com/facebook" target="_blank"><img src="images/facebook.svg" alt="Link to my Facebook Profile"></a>
