modified:   index.html 	modified:   styles/small.css

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         <div class="header-content">
             <img src="images/mylogo.svg" alt="Site Logo" class="logo">
             <span>Nirintsoa Liva Jhonson Rabariharinjaka</span>
-            <button id="menu-button" class="menu-button">&#9776;</button>
-        </div>
+            <button id="menu-button" class="menu-button">&#9776;</button> </div>
         <nav id="main-nav">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="chamber/index.html">Chamber</a></li>
+                <li><a href="index.html" class="active">Home</a></li> <li><a href="chamber/index.html">Chamber</a></li>
                 <li><a href="final/index.html">Final</a></li>
             </ul>
         </nav>
@@ -69,7 +67,7 @@
                 <button id="filter-cse" class="filter-button">CSE Courses</button>
             </div>
             <div id="courses-container" class="courses-grid">
-            </div>
+                </div>
             <p class="credits-summary">Total Credits Displayed: <span id="total-credits">0</span></p>
         </section>
 
@@ -77,10 +75,10 @@
 
     <footer>
         <div class="social-media">
-            <a href="https://github.com/LivaJhonson/wdd231" target="_blank"><img src="images/github.png" alt="Link that goes to my GitHub Profile"></a>
-            <a href="https://www.linkedin.com/in/liva-jhonson-140088338/" target="_blank"><img src="images/linkedin.svg" alt="Link to my LinkedIn Profile"></a>
-            <a href="https://twitter.com/twitter" target="_blank"><img src="images/twitter.svg" alt="Link to X (formerly Twitter) Profile"></a>
-            <a href="https://facebook.com/facebook" target="_blank"><img src="images/facebook.svg" alt="Link to my Facebook Profile"></a>
+            <a href="https://github.com/LivaJhonson/wdd231" target="_blank"><img src="images/github.png" alt="Link to my GitHub profile"></a>
+            <a href="https://www.linkedin.com/in/liva-jhonson-140088338/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+            <a href="https://twitter.com/twitter" target="_blank"><img src="images/twitter.svg" alt="X (formerly Twitter)"></a>
+            <a href="https://facebook.com/facebook" target="_blank"><img src="images/facebook.svg" alt="Facebook"></a>
         </div>
         <p>&copy; <span id="currentyear"></span> Nirintsoa Liva Jhonson Rabariharinjaka &#9702; Toamasina/Madagascar</p>
         <p id="lastModified"></p>
