modified:   chamber/directory.html 	modified:   chamber/scripts/main.js

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,12 +13,11 @@
 
     <meta property="og:title" content="Timbuktu Chamber of Commerce Directory">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourwebsite.com/chamber/images/og-directory-image.jpg"> <meta property="og:url" content="https://yourwebsite.com/chamber/directory.html"> <meta property="og:description" content="Discover businesses in Timbuktu, Mali, through the Chamber of Commerce directory.">
+    <meta property="og:image" content="https://mywebsite.com/chamber/images/og-directory-image.jpg">
+    <meta property="og:url" content="https://mywebsite.com/chamber/directory.html">
+    <meta property="og:description" content="Discover businesses in Timbuktu, Mali, through the Chamber of Commerce directory.">
 
-    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
-    <script src="scripts/main.js" defer></script>
-
 </head>
 <body>
     <header class="site-header">
@@ -35,7 +34,8 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="discover.html">Discover</a></li>
-                    <li><a href="directory.html" class="active">Directory</a></li> <li><a href="join.html">Join</a></li>
+                    <li><a href="directory.html" class="active">Directory</a></li>
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="podcast.html">Podcast</a></li>
                     <li><a href="events.html">Events</a></li>
@@ -51,7 +51,7 @@
             <button id="list-view-btn">List View</button>
         </div>
         <section class="member-display">
-        </section>
+            </section>
     </main>
 
     <footer class="site-footer">
@@ -70,12 +70,13 @@
             </div>
             <div class="project-info">
                 <p>WDD231 Class Project</p>
-                <p>Chrisostome</p>
+                <p>Nirintsoa Liva Jhonson Rabariharinjaka</p>
                 <p>&copy; <span id="currentyear"></span> Timbuktu Chamber of Commerce</p>
                 <p>Last Modification: <span id="lastmodified"></span></p>
             </div>
         </div>
     </footer>
 
+    <script src="scripts/main.js" defer></script>
 </body>
 </html>
