modified:   chamber/directory.html 	modified:   chamber/scripts/main.js

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,8 +13,8 @@
 
     <meta property="og:title" content="Timbuktu Chamber of Commerce Directory">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://mywebsite.com/chamber/images/og-directory-image.jpg">
-    <meta property="og:url" content="https://mywebsite.com/chamber/directory.html">
+    <meta property="og:image" content="https://yourwebsite.com/chamber/images/og-directory-image.jpg">
+    <meta property="og:url" content="https://yourwebsite.com/chamber/directory.html">
     <meta property="og:description" content="Discover businesses in Timbuktu, Mali, through the Chamber of Commerce directory.">
 
     <link rel="stylesheet" href="styles/main.css">
@@ -70,7 +70,7 @@
             </div>
             <div class="project-info">
                 <p>WDD231 Class Project</p>
-                <p>Nirintsoa Liva Jhonson Rabariharinjaka</p>
+                <p>Chrisostome</p>
                 <p>&copy; <span id="currentyear"></span> Timbuktu Chamber of Commerce</p>
                 <p>Last Modification: <span id="lastmodified"></span></p>
             </div>
