--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,6 +9,9 @@
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="Timbuktu Chamber of Commerce Directory">
