new file:   chamber/images/acme_logo.webp 	new file:   chamber/images/artisan_craft_logo.webp 	new file:   chamber/images/bakery_cafe_logo.webp 	new file:   chamber/images/elite_fitness_logo.webp 	new file:   chamber/images/green_valley_logo.webp 	new file:   chamber/images/tech_solutions_logo.webp 	new file:   chamber/images/widgets_r_us_logo.webp

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -53,8 +53,7 @@
             <button id="grid-view-btn">Grid View</button>
             <button id="list-view-btn">List View</button>
         </div>
-        <section class="member-display">
-            </section>
+        <section class="member-display"></section>
     </main>
 
     <footer class="site-footer">
