modified:   chamber/directory.html

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -62,7 +62,7 @@
                 <h3>Timbuktu Chamber of Commerce</h3>
                 <p>10 Rue De La Paix</p>
                 <p>Timbuktu, Mali 999</p>
-                <p>Email: <a href="mailto:info@timbuktuchamber.org">info@timbuktuchamber.org</a></p>
+                <p>Email: <a href="info@timbuktucc.org">info@timbuktuchamber.org</a></p>
                 <p>Phone: (223) 555-2300</p>
             </div>
             <div class="social-media">
