modified:   chamber/directory.html 	new file:   chamber/images/og-directory-image.jpg

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,8 +16,8 @@
 
     <meta property="og:title" content="Timbuktu Chamber of Commerce Directory">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourwebsite.com/chamber/images/og-directory-image.jpg">
-    <meta property="og:url" content="https://yourwebsite.com/chamber/directory.html">
+    <meta property="og:image" content="https://livajhonson.github.io/wdd231/chamber/images/og-directory-image.jpg">
+    <meta property="og:url" content="https://livajhonson.github.io/wdd231/chamber/directory.html">
     <meta property="og:description" content="Discover businesses in Timbuktu, Mali, through the Chamber of Commerce directory.">
 
     <link rel="stylesheet" href="styles/main.css">
