modified:   chamber/directory.html

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -72,7 +72,7 @@
             </div>
             <div class="project-info">
                 <p>WDD231 Class Project</p>
-                <p>Chrisostome</p>
+                <p>Nirintsoa Liva Jhonson Rabariharinjaka</p>
                 <p>&copy; <span id="currentyear"></span> Timbuktu Chamber of Commerce</p>
                 <p>Last Modification: <span id="lastmodified"></span></p>
             </div>
