--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,7 +27,7 @@
         <div class="header-content">
             <div class="logo-container">
                 <img src="images/chamber-logo.png" alt="Timbuktu Chamber of Commerce Logo" class="chamber-logo">
-                <h1 class="site-title">Timbuktu <br><span>Chamber of Commerce</span></h1>
+                <h2 class="site-title">Timbuktu <br><span>Chamber of Commerce</span></h2>
             </div>
             <nav class="main-nav">
                 <div class="theme-toggle">
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-        <h1>Business Directory</h1>
+        <h1>Timbuktu Chamber of Commerce Directory</h1>
         <div class="view-toggle">
             <button id="grid-view-btn">Grid View</button>
             <button id="list-view-btn">List View</button>
@@ -59,7 +59,7 @@
     <footer class="site-footer">
         <div class="footer-content">
             <div class="chamber-contact-info">
-                <h1>Timbuktu Chamber of Commerce</h1>
+                <h3>Timbuktu Chamber of Commerce</h3>
                 <p>10 Rue De La Paix</p>
                 <p>Timbuktu, Mali 999</p>
                 <p>Email: <a href="info@timbuktucc.org">info@timbuktuchamber.org</a></p>
