--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -66,9 +66,9 @@
                 <p>Phone: (223) 555-2300</p>
             </div>
             <div class="social-media">
-                <a href="#" aria-label="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
-                <a href="#" aria-label="Twitter"><img src="images/twitter.svg" alt="Twitter"></a>
-                <a href="#" aria-label="LinkedIn"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+                <a href="https://www.youtube.com/" aria-label="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
+                <a href="https://x.com/" aria-label="Twitter"><img src="images/twitter.svg" alt="Twitter"></a>
+                <a href="https://www.linkedin.com/feed/" aria-label="LinkedIn"><img src="images/linkedin.svg" alt="LinkedIn"></a>
             </div>
             <div class="project-info">
                 <p>WDD231 Class Project</p>
