--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,6 +40,7 @@
     </header>
 
     <main class="homepage-main">
+        <h1 class="visually-hidden">Timbuktu Chamber of Commerce - Home</h1>
         <section class="hero-section">
             <img src="images/hero-image.webp" alt="Scenic view of Timbuktu" class="hero-image">
             <div class="hero-overlay">
