modified:   chamber/index.html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timbuktu Chamber of Commerce - Home</title> <meta name="description" content="Welcome to the Timbuktu Chamber of Commerce. Discover local businesses, events, and community initiatives in Timbuktu, Mali."> <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
+    <title>Timbuktu Chamber of Commerce - Home</title> 
+    <meta name="description" content="Welcome to the Timbuktu Chamber of Commerce. Discover local businesses, events, and community initiatives in Timbuktu, Mali."> 
+    <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
