modified:   chamber/index.html 	modified:   chamber/styles/home.css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <main class="homepage-main">
-        <h1 class="visually-hidden">Timbuktu Chamber of Commerce - Home</h1>
+        <h1 class="main-page-title">Timbuktu Chamber of Commerce - Home</h1> 
         <section class="hero-section">
             <img src="images/hero-image.webp" alt="Scenic view of Timbuktu" class="hero-image">
             <div class="hero-overlay">
