modified:   chamber/index.html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <main class="homepage-main">
-        <h1>Timbuktu Chamber of Commerce - Home</h1> 
+        <h1>Timbuktu Chamber of Commerce</h1> 
         <section class="hero-section">
             <img src="images/hero-image.webp" alt="Scenic view of Timbuktu" class="hero-image">
             <div class="hero-overlay">
