--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,8 +31,10 @@
                 </div>
                 <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
                 <ul class="nav-links">
-                    <li><a href="index.html" class="active">Home</a></li> <li><a href="discover.html">Discover</a></li>
-                    <li><a href="directory.html">Directory</a></li> <li><a href="join.html">Join</a></li>
+                    <li><a href="index.html" class="active">Home</a></li> 
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="directory.html">Directory</a></li> 
+                    <li><a href="join.html">Join</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="podcast.html">Podcast</a></li>
                     <li><a href="events.html">Events</a></li>
