modified:   chamber/join.html

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,6 +6,12 @@
     <title>Timbuktu Chamber of Commerce - Join Us</title>
     <meta name="description" content="Join the Timbuktu Chamber of Commerce. Apply for membership and explore benefits for Non-Profit, Bronze, Silver, and Gold levels.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
+
+    <meta property="og:title" content="Join the Timbuktu Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://yourdomain.com/chamber/images/chamber-logo.png"> 
+    <meta property="og:url" content="https://yourdomain.com/chamber/join.html"> <meta property="og:description" content="Become a part of the Timbuktu Chamber of Commerce! Fill out our membership application form today to access exclusive benefits, networking opportunities, and resources designed to support your business in the community.">
+    <link rel="icon" href="images/favicon.ico">
     
     <link rel="icon" href="images/favicon.ico">
     
@@ -43,7 +49,7 @@
     </header>
 
     <main class="join-main">
-        <h1 class="main-page-title">Join the Timbuktu Chamber of Commerce</h1>
+        <h1 class="main-page-title">Timbuktu Chamber of Commerce Join Us</h1>
         <div class="join-content">
             <form method="get" action="thankyou.html" class="membership-form">
                 <fieldset>
