modified:   chamber/join.html

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -9,8 +9,9 @@
 
     <meta property="og:title" content="Join the Timbuktu Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourdomain.com/chamber/images/chamber-logo.png"> 
-    <meta property="og:url" content="https://yourdomain.com/chamber/join.html"> <meta property="og:description" content="Become a part of the Timbuktu Chamber of Commerce! Fill out our membership application form today to access exclusive benefits, networking opportunities, and resources designed to support your business in the community.">
+    <meta property="og:image" content="https://livajhonson.github.io/wdd231/chamber/images/og-directory-image.jpg"> 
+    <meta property="og:url" content="https://livajhonson.github.io/wdd231/join.html"> 
+    <meta property="og:description" content="Become a part of the Timbuktu Chamber of Commerce! Fill out our membership application form today to access exclusive benefits, networking opportunities, and resources designed to support your business in the community.">
     <link rel="icon" href="images/favicon.ico">
     
     <link rel="icon" href="images/favicon.ico">
@@ -143,7 +144,7 @@
                 <h3>Timbuktu Chamber of Commerce</h3>
                 <p>10 Rue De La Paix</p>
                 <p>Timbuktu, Mali 999</p>
-                <p>Email: <a href="mailto:info@timbuktuchamber.org">info@timbuktuchamber.org</a></p>
+                <p>Email: <a href="info@timbuktuchamber.org">info@timbuktuchamber.org</a></p>
                 <p>Phone: (223) 555-2300</p>
             </div>
             <div class="social-media">
