modified:   chamber/discover.html

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -21,7 +21,7 @@
         <div class="header-content">
             <div class="logo-container">
                 <img src="images/chamber-logo.png" alt="Timbuktu Chamber of Commerce Logo" class="chamber-logo">
-                <h1 class="site-title">Timbuktu <br><span>Chamber of Commerce By Chrisostome</span></h1>
+                <h1 class="site-title">Timbuktu <br><span>Chamber of Commerce</span></h1>
             </div>
             <nav class="main-nav">
                 <div class="theme-toggle">
