--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -13,6 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
+        
+    <meta property="og:title" content="Join the Timbuktu Chamber of Commerce Discover">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://livajhonson.github.io/wdd231/chamber/images/og-directory-image.jpg">
+    <meta property="og:url" content="https://livajhonson.github.io/wdd231/chamber/discover.html">
+    <meta property="og:description" content="Join the Timbuktu Chamber of Commerce! We offer membership levels for Non-Profit, Bronze, Silver, and Gold businesses. Discover the benefits and grow with our community.">
+
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/discover.css"> 
 </head>
@@ -59,7 +66,7 @@
                 <h3>Timbuktu Chamber of Commerce</h3>
                 <p>10 Rue De La Paix</p>
                 <p>Timbuktu, Mali 999</p>
-                <p>Email: <a href="mailto:info@timbuktuchamber.org">info@timbuktuchamber.org</a></p>
+                <p>Email: <a href="info@timbuktucc.org">info@timbuktuchamber.org</a></p>
                 <p>Phone: (223) 555-2300</p>
             </div>
             <div class="social-media">
