--- a/final.html
+++ b/final.html
@@ -19,8 +19,8 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="The Pantry Chef - Simple Recipes from Everyday Ingredients">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://yourwebsite.com/images/og-hero-image.jpg">
-    <meta property="og:url" content="https://yourwebsite.com/final.html">
+    <meta property="og:image" content="https://th.bing.com/th/id/OIP.w-xrA84Q3_QgwqyeOuj4WwHaE8?w=265&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7">
+    <meta property="og:url" content="https://livajhonson.github.io/wdd231/final.html">
     <meta property="og:description" content="Get inspired with quick, easy, and tasty recipes using ingredients from your pantry.">
 
     <!-- Styles -->
