--- a/final.html
+++ b/final.html
@@ -60,7 +60,7 @@
         <section class="featured-recipe">
             <h2>Featured Recipe</h2>
             <div class="recipe-card">
-                <img src="https://th.bing.com/th/id/OIP.VmnyfVuV9NLwp5OFlN1ZiAHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Chicken and Veggie Stir Fry">
+                <img src="https://th.bing.com/th/id/OIP.VmnyfVuV9NLwp5OFlN1ZiAHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Chicken and Veggie Stir Fry" loading="lazy">
                 <div class="card-text">
                     <h3>Chicken & Veggie Stir Fry</h3>
                     <p>Quick, colorful, and packed with flavor — ready in 20 minutes! Perfect for busy weeknights.</p>
@@ -73,32 +73,32 @@
             <h2>Recent Recipes</h2>
             <div class="grid" id="recipeGrid">
                 <div class="recipe-card" data-ingredients="pasta garlic butter">
-                    <img src="https://th.bing.com/th/id/OIP.s8SAiIzx8HFxEaP0G86dEgHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Pasta">
+                    <img src="https://th.bing.com/th/id/OIP.s8SAiIzx8HFxEaP0G86dEgHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Pasta" loading="lazy">
                     <h3>Garlic Butter Pasta</h3>
                     <p>Simple and comforting — a creamy garlic butter sauce tossed with pasta.</p>
                 </div>
                 <div class="recipe-card" data-ingredients="vegetables broth carrots">
-                    <img src="https://th.bing.com/th/id/OIP.WKAwHgbJ5g7XrdSPVNK4OgHaFf?w=235&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Soup">
+                    <img src="https://th.bing.com/th/id/OIP.WKAwHgbJ5g7XrdSPVNK4OgHaFf?w=235&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Soup" loading="lazy">
                     <h3>Hearty Vegetable Soup</h3>
                     <p>A warm, nourishing bowl filled with seasonal veggies and herbs.</p>
                 </div>
                 <div class="recipe-card" data-ingredients="lettuce tomatoes cucumber">
-                    <img src="https://th.bing.com/th/id/OIP.XXZ_ay9qaKPhiNOc0an0zQHaE7?w=247&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Salad">
+                    <img src="https://th.bing.com/th/id/OIP.XXZ_ay9qaKPhiNOc0an0zQHaE7?w=247&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Salad" loading="lazy">
                     <h3>Fresh Garden Salad</h3>
                     <p>Crunchy, colorful, and packed with vitamins — a salad for any meal.</p>
                 </div>
                 <div class="recipe-card" data-ingredients="eggs cheese herbs">
-                    <img src="https://th.bing.com/th/id/OIP.Z8bOp9Hix5HmxJn9ESPYGAHaEK?w=299&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Omelette">
+                    <img src="https://th.bing.com/th/id/OIP.Z8bOp9Hix5HmxJn9ESPYGAHaEK?w=299&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Omelette" loading="lazy">
                     <h3>Cheese & Herb Omelette</h3>
                     <p>Fluffy eggs folded around melted cheese and fresh herbs.</p>
                 </div>
                 <div class="recipe-card" data-ingredients="rice chicken soy-sauce">
-                    <img src="https://th.bing.com/th/id/OIP.0VJIFQFNsRskYe-oL6_uXgHaE6?w=273&h=181&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Fried Rice">
+                    <img src="https://th.bing.com/th/id/OIP.0VJIFQFNsRskYe-oL6_uXgHaE6?w=273&h=181&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Fried Rice" loading="lazy">
                     <h3>Quick Chicken Fried Rice</h3>
                     <p>Leftover rice turns into magic with chicken, veggies, and soy sauce.</p>
                 </div>
                 <div class="recipe-card" data-ingredients="bread eggs milk cinnamon">
-                    <img src="https://th.bing.com/th/id/OIP.Z8bOp9Hix5HmxJn9ESPYGAHaEK?w=299&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="French Toast">
+                    <img src="https://th.bing.com/th/id/OIP.Z8bOp9Hix5HmxJn9ESPYGAHaEK?w=299&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="French Toast" loading="lazy">
                     <h3>Classic French Toast</h3>
                     <p>Golden, soft, and dusted with cinnamon sugar — breakfast bliss.</p>
                 </div>
