--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <button id="menu-button" class="menu-button">&#9776;</button> </div>
         <nav id="main-nav">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li> <li><a href="chamber/index.html">Chamber</a></li>
-                <li><a href="final/index.html">Final</a></li>
+                <li><a href="index.html" class="active">Home</a></li> 
+                <li><a href="chamber/index.html">Chamber</a></li>
+                <li><a href="final.html">Final</a></li>
             </ul>
         </nav>
     </header>
