--- a/recipes.html
+++ b/recipes.html
@@ -3,23 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Pantry Chef - Simple Recipes from Everyday Ingredients</title>
-    <meta name="description" content="Discover simple, delicious recipes you can make from ingredients already in your kitchen. The Pantry Chef helps home cooks create amazing meals without extra shopping.">
+    <title>All Recipes - The Pantry Chef</title>
+    <meta name="description" content="Explore all recipes on The Pantry Chef, from quick meals to hearty dinners, all made from simple ingredients.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
-
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
-
-    <meta property="og:title" content="The Pantry Chef - Simple Recipes from Everyday Ingredients">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://livajhonson.github.io/wdd231/final.webp">
-    <meta property="og:url" content="https://livajhonson.github.io/wdd231/final.html">
-    <meta property="og:description" content="Get inspired with quick, easy, and tasty recipes using ingredients from your pantry.">
-
     <link rel="stylesheet" href="styles/final.css">
 </head>
 <body>
@@ -29,7 +19,7 @@
             <span>The Pantry Chef</span>
         </div>
         <nav class="nav" id="navMenu">
-            <a href="final.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="recipes.html">Recipes</a>
             <a href="#">Categories</a>
             <a href="about.html">About</a>
@@ -37,40 +27,16 @@
         </nav>
         <button class="menu-toggle" id="menuToggle">☰</button>
     </header>
-
     <main>
         <div class="main-header">
-            <h1>The Pantry Chef</h1>
-            <p>Simple Recipes from Everyday Ingredients</p>
+            <h1>All Our Recipes</h1>
+            <p>Search or browse all of our delicious, pantry-friendly meals.</p>
         </div>
         <section class="search-section">
             <input type="text" id="searchInput" placeholder="Search recipes by name or ingredient..." />
             <button id="searchBtn">Search</button>
         </section>
-
-        <section class="hero">
-            <img src="https://th.bing.com/th/id/OIP.w-xrA84Q3_QgwqyeOuj4WwHaE8?w=265&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Featured Recipe">
-            <div class="hero-text">
-                <h1>Fresh Meals from Your Pantry</h1>
-                <p>Delicious recipes made from the ingredients you already have at home.</p>
-                <a href="#" class="btn">Browse Recipes</a>
-            </div>
-        </section>
-
-        <section class="featured-recipe">
-            <h2>Featured Recipe</h2>
-            <div class="recipe-card">
-                <img src="https://th.bing.com/th/id/OIP.VmnyfVuV9NLwp5OFlN1ZiAHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Chicken and Veggie Stir Fry" loading="lazy">
-                <div class="card-text">
-                    <h3>Chicken & Veggie Stir Fry</h3>
-                    <p>Quick, colorful, and packed with flavor — ready in 20 minutes! Perfect for busy weeknights.</p>
-                    <a href="#" class="btn">View Recipe</a>
-                </div>
-            </div>
-        </section>
-
         <section class="recipe-grid">
-            <h2>Recent Recipes</h2>
             <div class="grid" id="recipeGrid">
                 <div class="recipe-card" data-ingredients="pasta garlic butter">
                     <img src="https://th.bing.com/th/id/OIP.s8SAiIzx8HFxEaP0G86dEgHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Pasta" loading="lazy">
@@ -105,7 +71,6 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <p>&copy; 2025 The Pantry Chef. All Rights Reserved.</p>
         <p>
@@ -114,7 +79,6 @@
             <a href="#">Contact</a>
         </p>
     </footer>
-
     <script src="scripts/final.js"></script>
 </body>
 </html>
