--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - The Pantry Chef</title>
-    <meta name="description" content="Learn more about The Pantry Chef, our mission to help home cooks, and our passion for simple, delicious food.">
+    <title>Contact Us - The Pantry Chef</title>
+    <meta name="description" content="Contact The Pantry Chef for questions, suggestions, or feedback.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,29 +21,44 @@
         <nav class="nav" id="navMenu">
             <a href="index.html">Home</a>
             <a href="recipes.html">Recipes</a>
-            <a href="#">Categories</a>
+            <a href="categories.html">Categories</a>
             <a href="about.html">About</a>
-            <a href="#">Contact</a>
+            <a href="contact.html" class="active">Contact</a>
         </nav>
         <button class="menu-toggle" id="menuToggle">☰</button>
     </header>
-    <main>
-        <div class="main-header">
-            <h1>About The Pantry Chef</h1>
-        </div>
-        <section style="padding: 2rem; max-width: 800px; margin: 0 auto; text-align: center;">
-            <p>Welcome to The Pantry Chef, your go-to source for simple and delicious recipes! Our mission is to help you create amazing meals using ingredients you already have in your kitchen. We believe that great food doesn't require a trip to the grocery store every day.</p>
-            <p>Our team of passionate home cooks carefully curates each recipe to be accessible, affordable, and full of flavor. Whether you're a beginner or a seasoned pro, you'll find inspiration here to turn everyday items into extraordinary dishes. Happy cooking!</p>
-        </section>
+
+    <main class="contact-main">
+        <h1>Contact Us</h1>
+        <p>We'd love to hear from you! Please fill out the form below to get in touch.</p>
+
+        <form action="form-action.html" method="get" class="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit" class="btn">Send Message</button>
+        </form>
     </main>
+
     <footer class="footer">
         <p>&copy; 2025 The Pantry Chef. All Rights Reserved.</p>
         <p>
             <a href="#">Privacy Policy</a> | 
             <a href="#">Terms of Service</a> | 
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a> |
+            <a href="attributions.html">Attributions</a> |
+            <a href="#">Video Demo</a>
         </p>
     </footer>
-    <script src="scripts/final.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
