--- a/final.html
+++ b/final.html
@@ -11,7 +11,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="The Pantry Chef - Simple Recipes from Everyday Ingredients">
@@ -29,11 +28,11 @@
             <span>The Pantry Chef</span>
         </div>
         <nav class="nav" id="navMenu">
-            <a href="final.html">Home</a>
+            <a href="final.html" class="active">Home</a>
             <a href="recipes.html">Recipes</a>
-            <a href="#">Categories</a>
+            <a href="categories.html">Categories</a>
             <a href="about.html">About</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <button class="menu-toggle" id="menuToggle">☰</button>
     </header>
@@ -49,22 +48,22 @@
         </section>
 
         <section class="hero">
-            <img src="https://th.bing.com/th/id/OIP.w-xrA84Q3_QgwqyeOuj4WwHaE8?w=265&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Featured Recipe">
+            <img src="https://wallpaperbat.com/img/8940717-food-chicken-hd-wallpaper.png" alt="Featured Recipe" loading="lazy">
             <div class="hero-text">
                 <h1>Fresh Meals from Your Pantry</h1>
                 <p>Delicious recipes made from the ingredients you already have at home.</p>
-                <a href="#" class="btn">Browse Recipes</a>
+                <a href="recipes.html" class="btn">Browse Recipes</a>
             </div>
         </section>
 
         <section class="featured-recipe">
             <h2>Featured Recipe</h2>
             <div class="recipe-card">
-                <img src="https://th.bing.com/th/id/OIP.VmnyfVuV9NLwp5OFlN1ZiAHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Chicken and Veggie Stir Fry" loading="lazy">
+                <img src="https://static.vecteezy.com/system/resources/previews/022/981/059/non_2x/chicken-stir-fry-with-vegetables-and-mushrooms-in-a-pan-on-black-background-free-photo.jpeg" alt="Chicken and Veggie Stir Fry" loading="lazy">
                 <div class="card-text">
                     <h3>Chicken & Veggie Stir Fry</h3>
                     <p>Quick, colorful, and packed with flavor — ready in 20 minutes! Perfect for busy weeknights.</p>
-                    <a href="#" class="btn">View Recipe</a>
+                    <a href="#" class="btn view-recipe-btn">View Recipe</a>
                 </div>
             </div>
         </section>
@@ -72,36 +71,7 @@
         <section class="recipe-grid">
             <h2>Recent Recipes</h2>
             <div class="grid" id="recipeGrid">
-                <div class="recipe-card" data-ingredients="pasta garlic butter">
-                    <img src="https://th.bing.com/th/id/OIP.s8SAiIzx8HFxEaP0G86dEgHaLH?w=186&h=279&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Pasta" loading="lazy">
-                    <h3>Garlic Butter Pasta</h3>
-                    <p>Simple and comforting — a creamy garlic butter sauce tossed with pasta.</p>
-                </div>
-                <div class="recipe-card" data-ingredients="vegetables broth carrots">
-                    <img src="https://th.bing.com/th/id/OIP.WKAwHgbJ5g7XrdSPVNK4OgHaFf?w=235&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Soup" loading="lazy">
-                    <h3>Hearty Vegetable Soup</h3>
-                    <p>A warm, nourishing bowl filled with seasonal veggies and herbs.</p>
-                </div>
-                <div class="recipe-card" data-ingredients="lettuce tomatoes cucumber">
-                    <img src="https://th.bing.com/th/id/OIP.XXZ_ay9qaKPhiNOc0an0zQHaE7?w=247&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Salad" loading="lazy">
-                    <h3>Fresh Garden Salad</h3>
-                    <p>Crunchy, colorful, and packed with vitamins — a salad for any meal.</p>
-                </div>
-                <div class="recipe-card" data-ingredients="eggs cheese herbs">
-                    <img src="https://th.bing.com/th/id/OIP.Z8bOp9Hix5HmxJn9ESPYGAHaEK?w=299&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Omelette" loading="lazy">
-                    <h3>Cheese & Herb Omelette</h3>
-                    <p>Fluffy eggs folded around melted cheese and fresh herbs.</p>
-                </div>
-                <div class="recipe-card" data-ingredients="rice chicken soy-sauce">
-                    <img src="https://th.bing.com/th/id/OIP.0VJIFQFNsRskYe-oL6_uXgHaE6?w=273&h=181&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="Fried Rice" loading="lazy">
-                    <h3>Quick Chicken Fried Rice</h3>
-                    <p>Leftover rice turns into magic with chicken, veggies, and soy sauce.</p>
-                </div>
-                <div class="recipe-card" data-ingredients="bread eggs milk cinnamon">
-                    <img src="https://th.bing.com/th/id/OIP.Z8bOp9Hix5HmxJn9ESPYGAHaEK?w=299&h=180&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3" alt="French Toast" loading="lazy">
-                    <h3>Classic French Toast</h3>
-                    <p>Golden, soft, and dusted with cinnamon sugar — breakfast bliss.</p>
-                </div>
+                <p>Loading recipes...</p>
             </div>
         </section>
     </main>
@@ -111,10 +81,24 @@
         <p>
             <a href="#">Privacy Policy</a> | 
             <a href="#">Terms of Service</a> | 
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a> |
+            <a href="attributions.html">Attributions</a> |
+            <a href="#">Video Demo</a>
         </p>
     </footer>
 
-    <script src="scripts/final.js"></script>
+    <div id="recipeModal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2 id="modalTitle"></h2>
+            <img id="modalImage" src="" alt="">
+            <h3>Ingredients</h3>
+            <ul id="modalIngredients"></ul>
+            <h3>Instructions</h3>
+            <p id="modalInstructions"></p>
+        </div>
+    </div>
+
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
